examples/test/testpolicy10243.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10243
  namespace: namespace370
spec:
  podSelector:
    matchLabels:
      key27: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value35
      podSelector:
        matchLabels:
          key29: value22
          key10: value1
          key49: value22
